--- a/login.html
+++ b/login.html
@@ -264,6 +264,7 @@
     </div>
   </div>
 
+  <script src="assets/js/api-service.js"></script>
   <script src="assets/js/theme.js"></script>
   <script src="assets/js/login.js"></script>
 </body>
